Add partial to emit SVG icons for navigation arrows. Add partial for generating and returning image thumbnails. Add shortcode for emitting img elements. Cosmetic improvements.

--- a/layouts/partials/trace.html
+++ b/layouts/partials/trace.html
@@ -1,5 +1,8 @@
 <!-- Call with
     (dict
         "tmpl" template path
-        "page" a regular page ) -->
-        {{ warnf "%v rendered with %v" .page.File.Path .tmpl }}
+        "page" a regular page
+    )
+    Issues a trace message via warnf as shown below.
+-->
+{{ warnf "%v rendered with %v" .page.File.Path .tmpl }}
